added syle for main image fadeout

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2593,6 +2593,12 @@ p {
   bottom: 0;
 }
 
+.banner__thumb.fade-out {
+  opacity: 0;
+  transition: opacity 0.6s ease;
+  /* Adjust the transition duration as needed */
+}
+
 @media (max-width: 1399px) {
   .banner__thumb {
     left: calc(50% + 80px);
