--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -5598,7 +5598,7 @@ p {
 
 /* Modal Content */
 .modal-content {
-  background: #c9f31d;
+  background: #fff;
   /* Your specified background color */
   color: #333;
   /* Dark text color for better contrast */
