--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3600,10 +3600,13 @@ p {
 .service__unique__item {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   border-bottom: 1px solid rgb(38, 37, 37);
   gap: 14px;
   transition: all 0.4s;
+  flex-direction: column;
+  border-radius: 8px;
+  margin-bottom: 20px;
 }
 
 .service__unique__item .left__service {
