marquee style change for mobile devices

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3187,9 +3187,9 @@ p {
     padding: 1px 0;
   }
 
-  .text-slider .marquee-item img {
+  /* .text-slider .marquee-item img {
     width: 220px;
-  }
+  } */
 }
 
 .marquee-wrapper {
